[11.September 2008]
- RubyCampaign/Intro: 
    - conversations written
- location.rb and nullocation.rb moved back from SchwerEngine to freeVikings,
  because they aren't general enough and are messy.
  I also converted their documentation.
- team.rb: documentation converted, Team#[] modified

[10.September 2008]
- GameUI::Menu : menu window being killed raises an exception, which
  leads to termination of the game (so it is possible to leave game menu
  not only by pressing QuitButton, but also by pressing 'X' button 
  of the window)
- Log4r is just optional. (mocklog4r.rb hacks it around)
- One help in level DefaultCampaign/ArcticTutorial updated
- Possibility to switch sound off
- game.rb: fixed music bug (music started only if you switched password 
  displaying off)
- monsters/mobilephone.rb
- RubyCampaign/Intro: temporarily out-of-order: I must finish MobilePhone
  and write the talk-files.

[8.September 2008]
- monsters/piranha.rb: new monster
- modified RubyCampaign/Intro map and script
- image for boat

[6.September 2008]
- possibility to move through gameui menu simply having a key pressed
  (not needed to press a key again and again)
- mouse support in gameui menu
- Caught some more exceptions during loading of a location
  (locationloader.rb and tiledmaploadstrategy.rb)
- Lock documentation ported to RDoc
- RubyCampaign/Intro level totally changed
- new tileset (coast of the sea)
- Bridge and Lift classes modified (inheritance, behavior of Bridge)
- Bridge is now themed object
- method StaticObject#unregister_in created

[4.September 2008]
- world.rb removed (class World was replaced by subclass StructuredWorld;
  useless superclass removed now)
- tested replacement of Log4r by an empty mockclass, but it didn't speed up
  the game
- Added music support (it is possible to choose music for level in it's
  'location.xml')

[3.September 2008]
- levelsuite.rb: new methods LevelSuite#title and LevelSuite#methods.